# organizations

./: .env_example  .gitignore  AUTH_README.md  Dockerfile  Makefile  README.md  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml  setup.cfg
.github/: dependabot.yml  labeler.yml
.github/workflows/: ha_ci.yml
alembic/: env.py
alembic/versions/: 2025_08_18_0108-16dd19e2a44a_create_tables.py  2025_08_18_1420-fcea6838faa1_add_test_data.py
app/: worker.py
app/core/: auth.py  config.py  containers.py  db.py  types.py
app/dependencies/: auth.py
app/models/: __init__.py  activity.py  building.py  custom_types.py  organization.py  organization_activity.py  phone.py
app/repos/: __init__.py  activity.py  base.py  building.py  organization.py  organization_activity.py  phone.py
app/resources/: exc_handlers.py  openapi.py  strings.py
app/resources/exceptions/: __init__.py
app/schemas/: __init__.py  activity.py  base.py  building.py  organization.py  organization_activity.py  phone.py
app/schemas/fields/: dt_without_tz.py
app/services/: activity.py  base.py  building.py  organization.py  organization_activity.py  phone.py
app/utils/: validation.py
app/views/: __init__.py  organization.py
scripts/: init-localstack.sh
tests/: conftest.py
tests/factories/: __init__.py  activity.py  base.py  building.py  organization.py  organization_activity.py  phone.py
tests/test_e2e/: __init__.py  test_auth.py  test_buildings.py  test_organizations.py
tests/test_integration/: conftest.py
